# litis

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  libprogargs.kdev4
api/: ArgumentScanner.hpp  ArgumentStack.hpp  Arguments.hpp  Option.hpp  OptionEqScanner.hpp  OptionInfo.hpp  OptionMap.hpp  OptionScanner.hpp  OptionSpScanner.hpp  StringStack.hpp
src/: ArgumentScanner.cpp  ArgumentStack.cpp  CMakeLists.txt  Option.cpp  OptionEqScanner.cpp  OptionScanner.cpp  OptionSpScanner.cpp  StringStack.cpp  main.cpp
